feat(): setup mysql with docker

--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "run": "docker compose up -d && node server.js ",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
+    "mysql": "^2.18.1",
     "socket.io": "^4.7.5"
   }
 }
