--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,32 @@
 services:
-  db:
-    image: mysql:latest
-    container_name: socketio
+  postgres:
+    image: postgres:15
+    container_name: my_postgres
     environment:
-      MYSQL_ROOT_PASSWORD: secret
-      MYSQL_DATABASE: tchat
-      MYSQL_USER: me
-      MYSQL_PASSWORD: password
+      POSTGRES_USER: myuser
+      POSTGRES_PASSWORD: mypassword
+      POSTGRES_DB: mydb
     ports:
-      - "3306:3306"
+      - "5432:5432"
     volumes:
-      - ./mysql_data:/var/lib/mysql
+      - pgdata:/var/lib/postgresql/data
+
+  node:
+    image: node:18
+    container_name: my_node_app
+    working_dir: /usr/src/app
+    volumes:
+      - .:/usr/src/app
+    ports:
+      - "3000:3000"
+    depends_on:
+      - postgres
+    environment:
+      DB_USER: myuser
+      DB_PASSWORD: mypassword
+      DB_HOST: postgres
+      DB_PORT: 5432
+      DB_NAME: mydb
+
+volumes:
+  pgdata:
