--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "run": "docker compose up -d && node server.js ",
+    "dev": "docker compose up -d && node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.19.2",
-    "mysql": "^2.18.1",
+    "mongodb": "6.8",
+    "pg": "^8.12.0",
+    "postgres": "^3.4.4",
     "socket.io": "^4.7.5"
   }
 }
