--- a/package.json
+++ b/package.json
@@ -3,17 +3,26 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "dev": "docker compose up -d && node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "tsx watch server.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.19.1",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongodb": "6.8",
     "pg": "^8.12.0",
     "postgres": "^3.4.4",
+    "prisma": "^5.19.1",
     "socket.io": "^4.7.5"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "tsx": "^4.19.0",
+    "typescript": "^5.5.4"
   }
 }
