--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "tsx prisma/seed.ts",
     "dev": "tsx watch src/index.ts",
-    "dev2": "tsx watch src/index.ts && docker compose up -d"
+    "dev:docker": "tsx watch src/index.ts && docker compose up -d"
   },
   "author": "",
   "license": "ISC",
